sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:20: error: not found: value i
  i = 0;
  ^AlgCombSort:22: error: not found: value i
    if(plusPetit(i+ecart,i)){
                 ^AlgCombSort:22: error: not found: value i
    if(plusPetit(i+ecart,i)){
                         ^AlgCombSort:23: error: not found: value i
        echange(i+ecart,i);
                ^AlgCombSort:23: error: not found: value i
        echange(i+ecart,i);
                        ^AlgCombSort:25: error: not found: value i
    i += 1;
    ^